--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^9.0.3",
     "react-router-dom": "^6.28.1",
     "tailwind-merge": "^2.6.0",
+    "vite-plugin-pwa": "^1.2.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
